--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,30 @@
-bcrypt==2.0.0
-behave==1.2.5
-cffi==1.5.2
-decorator==4.0.9
-enum34==1.1.2
-Flask==0.10.1
-Flask-Bcrypt==0.7.1
-Flask-Login==0.3.2
-Flask-SQLAlchemy==2.1
-Flask-Testing==0.4.2
-Flask-WTF==0.12
-infinity==1.3
-intervals==0.6.0
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-nose==1.3.7
-parse==1.6.6
-parse-type==0.3.4
-pycparser==2.14
-six==1.10.0
-SQLAlchemy==1.0.11
-SQLAlchemy-Utils==0.31.6
-validators==0.10
-Werkzeug==0.11.3
-wheel==0.24.0
-WTForms==2.1
-WTForms-Alchemy==0.15.0
-WTForms-Components==0.10.0
+alembic==1.16.1
+bcrypt==4.3.0
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.2.3
+importlib_metadata==8.7.0
+infinity==1.5
+intervals==0.9.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+psycopg2-binary==2.9.10
+SQLAlchemy==2.0.41
+SQLAlchemy-Utils==0.41.2
+tomli==2.2.1
+typing_extensions==4.14.0
+validators==0.35.0
+Werkzeug==3.1.3
+WTForms==3.2.1
+WTForms-Alchemy==0.19.0
+WTForms-Components==0.11.0
+WTForms-SQLAlchemy==0.4.2
+zipp==3.23.0
