--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,5 @@ WTForms-Alchemy==0.19.0
 WTForms-Components==0.11.0
 WTForms-SQLAlchemy==0.4.2
 zipp==3.23.0
+python-dateutil==2.8.2
+python-dateutil==2.8.2
